# anki-vocab

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  PLANS.md  README.md  main.py  pyproject.toml
src/anki_card_generator/: __init__.py  __main__.py  app.py  cli.py  system_prompt.jinja
src/anki_card_generator/commands/: config.py  session.py  update.py  utils.py
src/anki_card_generator/core/: __init__.py  audio.py  config.py  prompting.py  schema.py
src/anki_card_generator/integrations/: ankiconnect.py  openai_client.py
src/anki_vocab/: cli.py  system_prompt.jinja
src/anki_vocab/commands/: session.py  update.py  utils.py
src/anki_vocab/core/: ankimapping.py  cleaning.py  config.py  prompting.py  schema.py
src/anki_vocab/integrations/: ankiconnect.py  edge_tts.py  openai_client.py
tests/: test_audio.py  test_cleaning.py  test_schema.py  test_session_parser.py  test_update_prompting.py
