[project]
name = "anki-card-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "edge-tts>=7.2.7",
    "openai>=2.14.0",
    "ruff>=0.14.10",
    "python-dotenv>=1.0.1",
]

[project.scripts]
anki-card-generator = "anki_card_generator.cli:cli"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anki_card_generator = ["system_prompt.jinja"]
