[project]
name = "anki-card-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.7",
    "openai>=2.14.0",
    "ruff>=0.14.10",
    "python-dotenv>=1.0.1",
    "pre-commit>=4.5.1",
    "typer>=0.12.5",
    "pytest>=8.4.1",
]

[project.scripts]
anki-card-generator = "anki_card_generator.cli:cli"
anki-vocab = "anki_card_generator.cli:cli"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anki_card_generator = ["system_prompt.jinja"]
