[project]
name = "anki-vocab"
version = "0.1.3"
description = "CLI for generating and maintaining Anki English vocabulary cards."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dmitry Aspisov" }]
keywords = ["anki", "anki-connect", "vocabulary", "cli", "tts", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Utilities",
]
urls = { Homepage = "https://github.com/aspisov/anki-vocab" }
dependencies = [
    "edge-tts>=7.2.7",
    "jinja2>=3.1.4",
    "openai>=2.14.0",
    "rich>=13.9.4",
    "ruff>=0.14.10",
    "python-dotenv>=1.0.1",
    "pre-commit>=4.5.1",
    "typer>=0.12.5",
    "pytest>=8.4.1",
    "twine>=6.2.0",
]

[project.scripts]
anki-vocab = "anki_vocab.cli:cli"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anki_vocab = ["system_prompt.jinja"]

[tool.ruff]
line-length = 120
